# wElasticsearch

./: README.md  pyproject.toml
.github/workflows/: test.yml
docker/: README.md
docs/: README.md  bibliography.rst  conf.py  faq.rst  glossary.rst  index.rst
docs/api_reference/: README.md  builders.rst  exceptions.rst  index.rst  index_management.rst  repository.rst
docs/getting_started/: README.md  installation.rst  quickstart.rst
docs/tutorials/: README.md  bulk_operations.rst  documents.rst  index.rst  search.rst
examples/: README.md
examples/01_crud/: README.md
examples/01_index/: README.md  example.py
examples/02_document/: README.md  example.py
examples/03_search/: README.md  example.py
examples/04_bulk/: README.md  example.py
examples/04_pagination/: README.md  example.py
examples/05_mapping/: README.md  example.py
examples/05_transactions/: README.md  example.py
examples/06_bulk_operations/: example.py
examples/07_logging/: example.py
examples/08_joins/: README.md  example.py
examples/09_aggregations/: README.md  example.py
examples/10_subqueries/: README.md  example.py
examples/11_window_functions/: README.md  example.py
examples/12_advanced_queries/: example.py
examples/13_temp_files/: example.py
src/: README.md
src/wElasticsearch/: README.md  __init__.py
src/wElasticsearch/builders/: __init__.py  query_builder.py
src/wElasticsearch/cli/: main.py
src/wElasticsearch/core/: __init__.py  connection.py  index.py  repository.py
src/wElasticsearch/exceptions/: __init__.py
src/wElasticsearch/types/: mappings.py
stress_test/: README.md
test/: README.md
test/integration/: README.md
test/unit/: README.md  test_all.py  test_basics.py  test_connection.py  test_exceptions.py  test_query_builder.py  test_repository.py  test_sql_types.py  test_sync.py
