[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wElasticsearch"
version = "1.0.0"
description = "Elasticsearch ORM library with Pydantic support"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "wisrovi", email = "wisrovi.rodriguez@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "elasticsearch>=8.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
welasticsearch = "wElasticsearch.cli.main:main"

[project.urls]
Homepage = "https://github.com/wisrovi/wElasticsearch"
Documentation = "https://github.com/wisrovi/wElasticsearch#readme"
Repository = "https://github.com/wisrovi/wElasticsearch"
Issues = "https://github.com/wisrovi/wElasticsearch/issues"

[tool.coverage.run]
source = ["wElasticsearch"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"